--- a/css/comm.css
+++ b/css/comm.css
@@ -126,7 +126,7 @@
 #con_page .con_post .box_post .wrp_profile .cate {
   width: 35%;
   text-align: right;
-  font-size: 88%;
+  font-size: 94%;
   font-weight: normal;
 }
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
@@ -140,8 +140,8 @@
   }
 }
 #con_page .con_post .box_post .box_txt .tit {
-  font-weight: bold;
-  font-weight: 600;
+  font-size: 113%;
+  font-weight: normal;
   margin-bottom: 8px;
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -149,6 +149,17 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
+  font-weight: bold;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_post .box_post .box_txt .tit {
+    font-size: 113%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_post .box_post .box_txt .tit {
+    font-size: 88%;
+  }
 }
 @media only screen and (max-width: 767px) {
   #con_page .con_post .box_post .box_txt .tit {
@@ -156,14 +167,25 @@
   }
 }
 #con_page .con_post .box_post .box_txt .txt {
-  font-size: 0.8em;
   color: #a4a4a4;
+  font-size: 94%;
+  font-weight: normal;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-all;
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  #con_page .con_post .box_post .box_txt .txt {
+    font-size: 94%;
+  }
+}
+@media only screen and (max-width: 767px) {
+  #con_page .con_post .box_post .box_txt .txt {
+    font-size: 69%;
+  }
 }
 #con_page .con_post .box_post .box_util {
   display: flex;
