--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -102,7 +102,7 @@ li {list-style-type: none;}
 	background-color: white;
 	box-sizing: border-box;
 	z-index: 100;
-	border-right: 1px solid $lightGray;
+	
 	.logo {
 		@include cV(padding-top, 0, 0.1em);
 		@include cV(width, 100%, 50%);
@@ -167,22 +167,19 @@ li {list-style-type: none;}
 			li {
 				margin: 35px 0;
 				a {
-					span {
-						font-size: 18px;
-					}
-					em {
-						font-size: 16px;
-					}
+					span {font-size: 18px;}
+					em {font-size: 16px;}
 				}
 			}
 		}
-		}
+	}
 
 	@include mq(pc_tab) {
 		height: 100vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+		border-right: 1px solid $lightGray;
 		.box_gnav {
 			height: 80vh;
 		}
@@ -381,8 +378,24 @@ li {list-style-type: none;}
 #con_page {
 	@include cV(width, calc(100% - 245px),calc(100% - 75px), 100%);
 	@include cV(margin-top, 0, 60px);
+	@include cV(padding-bottom, 100px, 17%);
     box-sizing: border-box;
-	@include cV(padding-bottom, 100px, 16%);
+
+	// common Style
+	.p_name {
+		@include cV(font-size, 0.9rem, 0.8rem);
+		line-height: 1;
+		font-weight: 400;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		@include cV(margin-bottom, 3px, 0.3em); 
+	}
+	.p_wrd, .p_count, .p_member {
+		@include cV(font-size, 0.8rem, 0.7rem);
+		color: $dkGray;
+	}
+
 
 	// slide_list_form
 	.wrp_slide_list {
@@ -401,6 +414,9 @@ li {list-style-type: none;}
 					display: inline-block;
 					a {
 						display: block;
+						.cate {
+							font-weight: normal;
+						}
 						.box_img {
 							border-radius: 16px 16px 0 0;
 							overflow: hidden;
@@ -421,31 +437,6 @@ li {list-style-type: none;}
 							border: 1px solid $lightGray;
 							@include cV(padding, 8%, 5% 8%, 5% 8%);
 							span, small, dl {display: block;}
-							.p_name {
-								@include txt_m;
-								line-height: 1;
-								font-weight: 400;
-								white-space: nowrap;
-								overflow: hidden;
-								text-overflow: ellipsis;
-								@include cV(margin-bottom, 3px, 0.3em); 
-							}
-							.p_wrd, .p_count, .p_member {
-								@include cV(font-size, 0.8em, 0.7em);
-								color: $dkGray;
-								.c-num {
-									strong {
-										color: $pointColor;
-										font-weight: 600;
-										&:after {
-											content: "/";
-											font-weight: 500;
-											margin: 0 0.3em;
-											color: $dkGray;
-										}
-									}
-								}
-							}
 						}
 					}
 					&:last-child {
@@ -518,19 +509,19 @@ li {list-style-type: none;}
 							flex-direction: column;
 							justify-content: space-between;
 							.cate {
-								@include txt_mini;
+								@include cV(font-size, 0.8rem, 0.8rem);
 								@include cV(margin-bottom, 20px, 5%);
 								color: $dkGray;
 							}
 							.txt {
-								@include txt_l;
+								font-size: 1rem;
 								display: -webkit-box;
 								-webkit-box-orient: vertical;
 								-webkit-line-clamp: 3;
 								overflow: hidden;
 								text-overflow: ellipsis;
 								word-break: break-all;
-								@include cV(height, 82px, 70px);
+								height: 70px;
 							}
 							.box_util {
 								display: flex;
@@ -716,7 +707,6 @@ li {list-style-type: none;}
 						position: relative;
 						height: 100%;
 						.tit {
-							@include tit_l;
 							z-index: 5;
 							position: absolute;
 							width: 100%;
@@ -724,15 +714,16 @@ li {list-style-type: none;}
 							top: 0;
 							left: 0;
 							color: white;
-							@include cV(padding, 5%, 8%, 10%);
+							@include cV(padding, 5%, 8%, 10% 7%);
 							.stxt, .txt {display: block;}
 							.stxt {
 								font-weight: 400;
-								@include txt_s;
-								
-								
+								@include txt_m;
 							}
-							.txt {font-weight: bold;}
+							.txt {
+								font-weight: bold;
+								@include tit_l;
+							}
 						}
 						.img {
 							width: 100%;
@@ -748,7 +739,7 @@ li {list-style-type: none;}
 							display: block;
 							width: 100%;
 							height: 100%;
-							background-color: rgba(0,0,0,0.15);
+							background-color: rgba(0,0,0,0.35);
 							position: absolute;
 							top: 0;
 							left: 0;
@@ -890,6 +881,7 @@ li {list-style-type: none;}
 	}
 
 
+
 	// profile set
 	.profile_set {
 		display: flex;
@@ -929,8 +921,8 @@ li {list-style-type: none;}
 			}
 			dd {
 				color: $dkGray;
-				font-size: 0.9em;
 				small {
+					display: inline-block;
 					&:before {
 						content: "・";
 					}
@@ -944,7 +936,7 @@ li {list-style-type: none;}
 		}
 	}
 
-	// alram red dot
+	// alaram red dot
 	i.red_dot {
 		display: inline-block;
 		@include cV(width, 8px, 0.5rem);
@@ -953,6 +945,8 @@ li {list-style-type: none;}
 		border-radius: 50%;
 		@include cV(margin-left, 4px, 0.5em);
 	}
+
+
 
 
 
@@ -1012,6 +1006,126 @@ li {list-style-type: none;}
 		}
 	}
 }
+
+// aside part
+
+.con_alarm {
+	position: fixed;
+	top: 0;
+	right: -100%;
+	width: 30%;
+	overflow-y: auto;
+	@include cV(width, 380px, 50%, 100%);
+	height: 100vh;
+	background-color: white;
+	z-index: 100;
+	transition: right 0.75s ease;
+	box-sizing: border-box;
+	.box_tit {
+		@include cV(padding, 7% 5%, 7% 5%, 7% 5%);
+		position: sticky;
+		top: 0;
+		background-color: white;
+		text-align: center;
+		line-height: 1;
+		.btn_close {
+			width: 16px;
+			height: 16px;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 5%;
+			margin: auto;
+			@include mq(pc) {
+				&:hover {
+					cursor: pointer;
+				}
+			}
+		}
+		
+	}
+	.box_list {
+		@include cV(padding, 0 5% 20%, 0 3% 20%, 0 3% 20%);
+		.list {
+			@include cV(margin-bottom, 8px, 3%);
+			a {
+				@include txt_s;
+				display: block;
+				@include cV(padding, 15px, 3%);
+				background-color: $whiteGray;
+				border: 1px solid $whiteGray;
+				box-sizing: border-box;
+				border-radius: 16px;
+				.box_cate {
+					display: flex;
+					justify-content: space-between;
+					.cate {
+						display: flex;
+						width: 70%;
+						@include cV(margin-bottom, 16px, 2%, 2%);
+					}
+					.time {
+						color: $dkGray;
+					}
+				}
+				.txt {
+					strong {
+						@include cV(margin-right, 4px, 0.5em);
+						&::before {
+							content: "[";
+						}
+						&::after {
+							content: "]";
+						}
+					}
+				}
+			}
+			&.notice {
+				.cate {
+					align-items: center;
+					&:before {
+						content: "";
+						width: 24px;
+						height: 24px;
+						background: url(../imgs/common/ic/ic_w.svg) no-repeat center;
+						border-radius: 100%;
+						@include cV(margin-right, 4px, 2%);
+					}
+				}
+			}
+			&.comm {
+				.cate {
+					align-items: center;
+					&:before {
+						content: "";
+						width: 24px;
+						height: 24px;
+						background: url(../imgs/common/ic/ic_talk_smile.svg) no-repeat center;
+						border-radius: 100%;
+						@include cV(margin-right, 4px, 2%);
+					}
+				}
+			}
+			@include mq(pc) {
+				&:hover {
+					a {
+						border: 1px solid $dk;
+					}
+				}
+			}
+
+		}
+	}
+	&.active {
+		right: 0;
+	}
+	@include mq(pc_tab) {
+		border-left: 1px solid $lightGray;
+	}
+}
+
+
+
 
 h1.p_tit {
 	@include tit_l;
