--- a/css/mypage.css
+++ b/css/mypage.css
@@ -5,7 +5,7 @@
   #header .logo {
     display: none;
   }
-  #header .p_tit.mypage {
+  #header .p_tit {
     display: block;
     font-weight: bold;
   }
