--- a/css/scss/common.scss
+++ b/css/scss/common.scss
@@ -110,6 +110,9 @@ li {list-style-type: none;}
 			display: block;
 		}
 	}
+	.btn_back {
+		display: none;
+	}
 	.p_tit {
 		@include tit_l;
 		display: none;
@@ -554,7 +557,6 @@ li {list-style-type: none;}
 		&.cate_nav {
 			top: 60px;
 			z-index: 10;
-			
 			.box_tit {
 				@include cV(margin-bottom, 20px, 3%);
 			}
@@ -580,6 +582,73 @@ li {list-style-type: none;}
 			@include mq(sp) {
 				position: sticky;
 				background-color: white;
+			}
+		}
+	}
+
+	// play_list_form
+	.wrp_play_list {
+		@include layout_normal;
+		.box_tit {
+			@include main_tit;
+			.st {
+				font-size: 0.8em;
+			}
+			
+		}
+		.con_play_list {
+			.box_play_list {
+				width: 100%;
+				position: relative;
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
+				li {
+					@include cV(width, 32%, 48%); 
+					@include cV(margin-left, 2%, 4%);
+					@include cV(margin-bottom, 2%, 4%);
+					display: inline-block;
+					a {
+						display: block;
+						.cate {
+							font-weight: normal;
+						}
+						.box_img {
+							border-radius: 16px 16px 0 0;
+							overflow: hidden;
+							background-color: gray;
+							width: 100%;
+							@include cV(height, 120px, 25vw);
+							img {
+								display: block;
+								width: 100%;
+								height: 100%;
+								object-fit: cover;
+								image-rendering: optimizeSpeed;
+							}
+						}
+						.box_txt {
+							border-radius: 0 0 16px 16px;
+							box-sizing: border-box;
+							border: 1px solid $lightGray;
+							@include cV(padding, 16px, 5% 8%, 5% 8%);
+							span, small, dl {display: block;}
+						}
+					}
+					&:first-child {
+						margin-left: 0;
+					}
+					@include mq(pc_tab) {
+						&:nth-child(3n+1) {
+							margin-left: 0;
+						}
+					}
+					@include mq(sp) {
+						&:nth-child(odd) {
+							margin-left: 0;
+						}
+					}
+				}
 			}
 		}
 	}
@@ -979,13 +1048,13 @@ li {list-style-type: none;}
 
 	.con_fix_top + .wrp_slide_list.cate_nav {
 		padding-top: 0;
-		@include cV(padding-top, 50px, 0, 0);
+		@include cV(padding-top, 50px, 0);
 	}
 
 
 
 	@include mq(pc) {
-		.wrp_slide_list, .con_wrd_list, .con_slide_hot, .con_story, .con_bn {
+		.wrp_slide_list, .con_wrd_list, .wrp_play_list, .con_slide_hot, .con_story, .con_bn {
 			max-width: 970px;
 		}
 	}
@@ -1019,7 +1088,7 @@ li {list-style-type: none;}
 	height: 100vh;
 	background-color: white;
 	z-index: 100;
-	transition: right 0.75s ease;
+	transition: right 0.5s ease;
 	box-sizing: border-box;
 	.box_tit {
 		@include cV(padding, 7% 5%, 7% 5%, 7% 5%);
